--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -314,7 +314,7 @@
                 </div>
             </div>
 
-            <div
+            <div -->
                 class="w-fit  bg-white border dark:bg-gray-800 border-[#D9D9DE] dark:border-gray-700 rounded-xl  p-4 md:p-6">
                 <span class="text-[#00373E] dark:text-gray-200  font-inter font-semibold text-lg block mb-5">Popular
                     locations of
@@ -323,7 +323,7 @@
             </div>
 
 
-        </div> -->
+        </div> 
 
     </main>
 
